# text-edit

./: .gitignore  .gitmodules  ISSUES.md  README.md  meson.build  meson_options.txt
js/: require.js
libs/: libvim
libs/quickjs/: quickjs-libc.c  quickjs.c
libs/tm-parser/textmate/: textmate.cpp  textmate.h
libs/tm-parser/textmate/extensions/: extension.cpp
libs/tm-parser/textmate/parser/: grammar.cpp  grammar.h
libs/tm-parser/textmate/resources/: themes.cpp
libs/tm-parser/textmate/theme/: theme.cpp
runtime/js/: polyfill.js  require.js
runtime/tests/: index.js
runtime/tests/hello/: README.md  package.json
runtime/ts/: tsconfig.json
src/: autocomplete.cpp  autocomplete.h  cursor.cpp  cursor.h  document.cpp  document.h  editor.cpp  editor.h  editor_view.cpp  editor_view.h  files.cpp  files.h  highlight.cpp  highlight.h  input.cpp  input.h  js.cpp  js.h  keybindings.cpp  keybindings.h  main.cpp  menu.cpp  menu.h  render.cpp  render.h  search.cpp  search.h  textmate.cpp  textmate.h  treesitter.cpp  treesitter.h  ui.cpp  ui.h  utf8.cpp  utf8.h  view.cpp  view.h
tests/: api.js  config.json  explorer_test.cpp  includes.md  index.js  jquery-3.6.1.js  keys_test.cpp  regex_test.cpp  single_line.c  single_line.cpp  tinywl.c
ts/: tsconfig.json
ts/vscode/: _vscode.d.ts  vscode.ts
